tests/NormalTests/paczka2/big_fuzzy/58462772.err
Error in line 1: A876 A75 45,3
Error in line 4: GCubrzeC A75 63,5
Error in line 3: BxKV3 A75 68,2
Error in line 13: GCubrzeC A876 85,0
Error in line 14: XaR2N7v S344 65,2
Error in line 32: XaR2N7v S215 12,6
Error in line 35: lW9Ox S215 11,2
Error in line 47: gPp A876 16,1
Error in line 64: lW9Ox A75 8,1
Error in line 75: v8QiB0xVL A75 82,8
Error in line 88: BxKV3 A75 47,1
Error in line 89: GCubrzeC S344 87,2
Error in line 100: gPp A75 16,9
Error in line 109: v8QiB0xVL A75 -4,6
Error in line 98: BxKV3 A876 143,3
Error in line 111: gPp S344 85,3
Error in line 119: A876 S344 2835
Error in line 117: v8QiB0xVL S344 1,5
Error in line 123: v8QiB0xVL A876 22,7
Error in line 135: GCubrzeC A876 26,20
Error in line 127: GCubrzeC A876 63,5
Error in line 130: gPp A876 108,5
Error in line 145: XaR2N7v A75 65,4
Error in line 110: A876 S344 74,4
Error in line 159: gPp A75 6,8
Error in line 155: A876 A75 157,0
Error in line 163: gPp A75 94,69
Error in line 170: v8QiB0xVL A876 59,3
Error in line 178: gPp A75 392,5
Error in line 175: XaR2N7v S215 3,8
Error in line 186: A876 S344 65,8
Error in line 207: v8QiB0xVL S215 5,4
Error in line 216: gPp S344 76,6
Error in line 218: gPp A876 9,6
Error in line 213: BxKV3 A876 206,4
Error in line 220: gPp A75 59,0
Error in line 224: gPp S344 14,5
Error in line 217: GCubrzeC A75 8,8
Error in line 215: v8QiB0xVL A876 166,0
